[package]
name = "zed-luau"
version = "0.3.1"
edition = "2024"
publish = false
license = "MIT"

[lib]
path = "src/luau.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.5.0"
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_path_to_error = "0.1"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

